attempt to fix invisible buttons 7

--- a/assets/css/Mobile_overlayUI.css
+++ b/assets/css/Mobile_overlayUI.css
@@ -126,9 +126,9 @@
     background: var(--left-arrow-icon-url);
     background-color: green;
     background-size: 100%, 100%;
-    -o-background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
+    -o-background-size: 100%, 100%;
+    -moz-background-size: 100%, 100%;
+    -webkit-background-size: 100%, 100%;
     background-repeat: no-repeat;
 }
 
@@ -137,9 +137,9 @@
     /* right: var(--ring-ctrl-padding-x); */
     background: var(--right-arrow-icon-url);
     background-size: 100%, 100%;
-    -o-background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
+    -o-background-size: 100%, 100%;
+    -moz-background-size: 100%, 100%;
+    -webkit-background-size: 100%, 100%;
     background-repeat: no-repeat;
 
 }
